syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package ds_task_group;

message DsTaskGroup {

     int32 id=1 ;
     optional string  name=2 ;
     optional string   description=3 ;
     int32  group_size=4 ;
     optional int64   project_code=5 ;
     optional int32  use_size=6 ;
     optional int32 user_id=7 ;
     optional int32 status=8 ;
     optional string create_time=9 ;
     optional string update_time=10 ;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsTaskGroupService {
  rpc ListDsTaskGroups(ListDsTaskGroupsRequest) returns (ListDsTaskGroupsResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsTaskGroups"
    };
  }

  rpc GetDsTaskGroup(GetDsTaskGroupRequest) returns (DsTaskGroup) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsTaskGroups/*}"
    };
  }

  rpc CreateDsTaskGroup(CreateDsTaskGroupRequest) returns (DsTaskGroup) {
    option (google.api.http) = {
      post: "/v1alpha1/DsTaskGroups"
      body: "DsTaskGroup"
    };
  }

  rpc UpdateDsTaskGroup(UpdateDsTaskGroupRequest) returns (DsTaskGroup) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsTaskGroup.name=DsTaskGroups/*}"
      body: "DsTaskGroup"
    };
  }

  rpc DeleteDsTaskGroup(DeleteDsTaskGroupRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsTaskGroups/*}"
    };
  }
}

// message DsTaskGroup {
// ! This should be defined elsewhere
// }

message ListDsTaskGroupsRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListDsTaskGroupsResponse {
  // The field name should match the noun "DsTaskGroup" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsTaskGroup DsTaskGroups = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsTaskGroupRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsTaskGroupRequest {
  // The parent resource name where the DsTaskGroup is to be created.
  string parent = 1;

  // The DsTaskGroup id to use for this DsTaskGroup.
  string DsTaskGroup_id = 2;

  // The DsTaskGroup resource to create.
  // The field name should match the Noun in the method name.
  DsTaskGroup DsTaskGroup = 3;
}

message UpdateDsTaskGroupRequest {
  // The DsTaskGroup resource which replaces the resource on the server.
  DsTaskGroup DsTaskGroup = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsTaskGroupRequest {
  // The resource name of the DsTaskGroup to be deleted.
  string name = 1;
}
